# rss-feed

./: .env.example  .gitignore  Cargo.toml  README.md  clear_main.py  refactor.py
.agents/: naming_rules.md  rust_performance.md  rust_performance_skills.md  rust_security.md  rust_security_skills.md
src/: chat_dtos.rs  lib.rs  main.rs  openrouter_dtos.rs
src/app_data/: mod.rs  news_group.rs
src/clustering/: buckets.rs  clustering.md  engine.rs  formatter.rs  mod.rs  overlap.rs  scoring.rs  signatures.rs
src/curation/: curation.md  engine.rs  mod.rs  priority.rs  signals.rs  sources.rs
src/fetching_rss/: days_to_keep_for_feed.rs  feching_rss.md  fetch_rss_news.rs  mod.rs  rss_ingestion_doc.md
src/formatters/: html.rs  text.rs
src/formatting_text/: clean_html.rs  clean_text.rs  mod.rs
src/grouping_news/: check_if_groups_match.rs  find_group_name.rs  find_topic_words.rs  format_group_for_ai.rs  group_related_news.md  group_related_news.rs  mod.rs  score_news_group.rs
src/models/: mod.rs  topic_cluster.rs
src/picking_news/: check_news.rs  check_source_type.rs  limit_news_per_source.rs  mod.rs  pick_news_for_ai.rs  picking_news.md  score_news.rs
src/prompts/: curation.yml  news.yml  news_message.yml  news_rules.yml
src/reading_news_today/: mod.rs  save_and_check_news_read_today.rs
src/reading_stories_today/: mod.rs  save_and_check_stories_read_today.rs
src/rss/: fetch.rs  lookback.rs  mod.rs  rss.md
src/sending_to_telegram/: format_text_for_telegram.rs  mod.rs  send_to_telegram.rs
src/services/: mod.rs  open_router_service.rs
src/telegram/: formatter.rs  mod.rs  sender.rs
(+65 files in other folders)
