[package]
name = "rss-feed"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.1.2"
chrono = "0.4.44"
dotenvy = "0.15.7"
futures = "0.3.32"
html2text = "0.16.7"
reqwest={ version = "0.13.2", features = ["json"] }
rss = "2.0.12"
serde = { version = "1.0.228", features = ["std", "derive"] }
tabled = "0.20.0"
tokio = { version = "1.50.0", features = ["full"] }
