[package]
name = "rss-feed"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.1.2"
anyhow = "1.0.102"
chrono = "0.4.44"
dotenvy = "0.15.7"
futures = "0.3.32"
html2text = "0.16.7"
moka={ version = "0.12.15", features = ["sync", "future"] }
reqwest={ version = "0.13.2", features = ["json"] }
rss = "2.0.12"
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
tabled = "0.20.0"
tokio = { version = "1.50.0", features = ["full"] }
validator = { version = "0.20", features = ["derive"] }
