[package]
name = "rss-feed"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.1.2"
anyhow = "1.0.102"
chrono = "0.4.44"
dotenvy = "0.15.7"
feed-rs = "2.3.1"
futures = "0.3.32"
html2text = "0.16.7"
reqwest = { version = "0.13.2", default-features = false, features = ["brotli", "charset", "deflate", "gzip", "json", "rustls"] }
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0.149"
serde_norway = "0.9.42"
sled = "0.34.7"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
